--- a/master.css
+++ b/master.css
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
 * {
       margin: 0;
@@ -20,7 +20,7 @@
 }
 
 html {
-      font-family: Popper;
+      font-family: 'Quicksand', sans-serif;
 }
 
 body {
