changed links styling

--- a/TeaShop/sass.scss
+++ b/TeaShop/sass.scss
@@ -39,6 +39,11 @@ body{
     
 }
 
+.linksClass{
+    text-decoration:none;
+    color:seashell;
+}
+
 .link{
     display:inline-flex;
     flex-direction:row;
