--- a/TeaShop/sass.css
+++ b/TeaShop/sass.css
@@ -60,6 +60,19 @@ body {
           align-items: center;
 }
 
+.classList {
+  text-decoration: none;
+  color: seashell;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: grey;
+}
+
 .link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -71,7 +84,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 #mission {
