fixed the links on the intro section page

--- a/intro-section-with-dropdown-navigation-main/intro-section-with-dropdown-navigation-main/sass.css
+++ b/intro-section-with-dropdown-navigation-main/intro-section-with-dropdown-navigation-main/sass.css
@@ -915,6 +915,9 @@ li {
   .navItem {
     display: inline-block;
   }
+  .navItem {
+    display: inline-block;
+  }
   .arrows {
     margin-left: 4px;
   }
@@ -1002,6 +1005,24 @@ li {
   .companyDropDown li:hover {
     background: #141414;
     color: #fafafa;
+  }
+}
+
+@media only screen and (min-width: 1181px) {
+  #company:hover {
+    color: #0724e1;
+  }
+  #featuresNav:hover {
+    color: #0724e1;
+  }
+  #careers:hover {
+    color: #0724e1;
+  }
+  #about:hover {
+    color: #0724e1;
+  }
+  .navItem:hover {
+    cursor: pointer;
   }
 }
 /*# sourceMappingURL=sass.css.map */
